kubernetes/system-config/external-secrets.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-secrets
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kubernetes-external-secrets
    helm.sh/chart: kubernetes-external-secrets-6.0.0
    app.kubernetes.io/instance: kakeibo
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: kubernetes-external-secrets
  ports:
    - protocol: TCP
      port: 3001
      name: prometheus
      targetPort: prometheus

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kubernetes-external-secrets
    helm.sh/chart: kubernetes-external-secrets-6.0.0
    app.kubernetes.io/instance: kakeibo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-external-secrets
      app.kubernetes.io/instance: kakeibo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-external-secrets
        app.kubernetes.io/instance: kakeibo
    spec:
      serviceAccountName: external-secrets
      containers:
        - name: kubernetes-external-secrets
          image: "godaddy/kubernetes-external-secrets:6.0.0"
          ports:
            - name: prometheus
              containerPort: 3001
          imagePullPolicy: IfNotPresent
          resources:
            {}
      securityContext:
        runAsNonRoot: true
        fsGroup: 65534
